--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -8,7 +8,7 @@
 
 <header class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="/">HackXX_Tutorial</a>
+        <a class="navbar-brand" href="/">Colony Counter</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,29 +46,13 @@
 <br><br>
 <section class="container">
     <div class="row">
-        <figure class="col-sm-4">
-            <h2>HackXX</h2>
+        <figure class="col-sm-8">
+            <h2>Python</h2>
             <a href="http://hackxx.sdhacks.io/">
                 <img src="{% static 'images/hackxx.svg' %}" height="250px"/></a>
             <p>HackXX is UC San Diego's women-centric hackathon. It’s an empowering place to build great projects. Over
                 24 hours, women will be given the tools and knowledge to materialize their technological dreams.
-                <a href="http://hackxx.sdhacks.io/">Learn more.</a></p>
-        </figure>
-        <figure class="col-sm-4">
-            <h2>HackXX</h2>
-            <a href="http://hackxx.sdhacks.io/">
-                <img src="{% static 'images/hackxx.svg' %}" height="250px"/></a>
-            <p>HackXX is UC San Diego's women-centric hackathon. It’s an empowering place to build great projects. Over
-                24 hours, women will be given the tools and knowledge to materialize their technological dreams.
-                <a href="http://hackxx.sdhacks.io/">Learn more.</a></p>
-        </figure>
-        <figure class="col-sm-4">
-            <h2>HackXX</h2>
-            <a href="http://hackxx.sdhacks.io/">
-                <img src="{% static 'images/hackxx.svg' %}" height="250px"/></a>
-            <p>HackXX is UC San Diego's women-centric hackathon. It’s an empowering place to build great projects. Over
-                24 hours, women will be given the tools and knowledge to materialize their technological dreams.
-                <a href="http://hackxx.sdhacks.io/">Learn more.</a></p>
+                <a href="/uploads/simple/">Try now.</a></p>
         </figure>
     </div>
 </section>
