--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -4,7 +4,7 @@
 
 <html>
 <head>
-    <title>HackXX_Tutorial</title>
+    <title>Jen and Alex are Awesome</title>
     <meta charset="utf-8"/>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
@@ -30,8 +30,7 @@
 
 <footer class="container">
     <div class="row">
-        <p class="col-sm-4">&copy; 2018 HackXX_Tutorial - IEEE UC San Diego. All logos for HackXX, H.A.R.D. HACK, and
-            SD Hacks belong to those organizations respectively.</p>
+        <p class="col-sm-4">&copy; ass.</p>
         <ul class="col-sm-8">
             <li class="col-sm-1">
                 <a href="https://twitter.com/IEEEorg"><img
