--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -48,13 +48,15 @@
 </center>
 <br><br>
 <section class="container">
-    <div class="row">
+    <div class="jen">
         <figure class="col-sm-8">
-            <h2>Python</h2>
-            <a href="http://hackxx.sdhacks.io/">
-                <img src="{% static 'images/hackxx.svg' %}" height="250px"/></a>
-            <p>HackXX is UC San Diego's women-centric hackathon. It’s an empowering place to build great projects. Over
-                24 hours, women will be given the tools and knowledge to materialize their technological dreams.
+            <h2>Contact us</h2>
+            <a href="http://instagram.com/jen.fung">
+                <img src="{% static 'images/jen.jpg' %}" style="float: left;"/></a>
+            <p>
+                <br></br>
+                Created using python, numpy library and a computer vision library openCV, this tool detects cell culture colonies and counts innumerable clones, providing data for further microbiological manipulations.
+            <br>It was inspired by my time in my previous position working in a DNA manipulation lab where E. coli cultures</br>
                 <a href="/uploads/simple/">Try now.</a></p>
         </figure>
     </div>
