--- a/web/templates/simple_upload.html
+++ b/web/templates/simple_upload.html
@@ -4,10 +4,18 @@
 
 {% block content %}
 
-  <form method="post" enctype="multipart/form-data">
+<center>
+<section class ="container">
+<div class ="upload_file">   
+<div id="upload_file" >
+    <div style="float:center;">
+    <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="file" name="myfile">
-    <button type="submit">Upload</button>
+    <input type="file" name="myfile" class = "btn btn-primary">
+    <button type="submit" class = "btn btn-primary">Upload</button>
+  
+
+</div>
   </form>
 
   {% if uploaded_file_url %}
