--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -22,21 +22,10 @@
                     <a class="nav-link" href="/uploads/simple/">Upload</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/results/">Results</a>
+                      <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/about">About<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="dropdown">
-                    <a class="nav-link dropdown-toggle" href="/youtubeapp/videos">Projects</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/youtubeapp/videos">Project 1</a>
-                        <a class="dropdown-item" href="#">Project 2</a>
-                        <a class="dropdown-item" href="#">Project 3</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
+                     <a class="nav-link" href="/contact">Contact<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
@@ -49,7 +38,21 @@
 <br><br>
 <section class="container">
     <div class="jen">
-        <figure class="col-sm-8">
+        <figure class="col-sm-6">
+            <h2>Contact us</h2>
+            <a href="http://instagram.com/jen.fung">
+                <img src="{% static 'images/jen.jpg' %}" style="float: left;"/></a>
+            <p>
+                <br></br>
+                Created using python, numpy library and a computer vision library openCV, this tool detects cell culture colonies and counts innumerable clones, providing data for further microbiological manipulations.
+            <br>It was inspired by my time in my previous position working in a DNA manipulation lab where E. coli cultures</br>
+                <a href="/uploads/simple/">Try now.</a></p>
+        </figure>
+    </div>
+</section>
+<section class="container">
+    <div class="jen">
+        <figure class="col-sm-6">
             <h2>Contact us</h2>
             <a href="http://instagram.com/jen.fung">
                 <img src="{% static 'images/jen.jpg' %}" style="float: left;"/></a>
