--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -106,10 +106,9 @@
 <section class="container">
     <div class="row">
         <figure class="jumbotron">
-            <h2>Acknowledgements</h2>
-            <img src="{% static 'images/bottomphoto.jpg' %}" /></a>
-            <p>Our web application was made possible by OpenCV (Open Source Computer Vision Library). Specifically the image processing open functions in OpenCV for python which uses contours to find the continuous points of pixels with the same colors or intensities. We are happy to share with you our first python and django project collaboration. 
-                <a href="http://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_contours/py_contours_begin/py_contours_begin.html">Learn more about OpenCV.</a></p>
+            <h2>counting made easy</h2>
+            Created using python, numpy library and a computer vision library openCV, this tool detects cell culture colonies and counts innumerable clones, providing data for further microbiological manipulations.
+            <br>It was inspired by my time in my previous position working in a DNA manipulation lab with E. coli cultures.</br></p>
         </figure>
     </div>
 </center>
