--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -34,7 +34,16 @@
 </header>
 <br><br>
 <center>
-    <img src="{% static 'images/geisel.jpg' %}"/>
+<div class = "sideby">
+    <img src="{% static 'images/test2.png' %}"/>
+    <img src="{% static 'images/test2out.png' %}"/>
+    <br><br></div>
+    <div class ="sidebyW">
+        <figure class = "col-md-10"
+    <p style="font-size: 1.45rem">By applying countours over a binary image of the cell culture, our application gives a close approximation of the number of colonies. 
+    <a href="/uploads/simple/">Try now.</a></p>
+    </p>    </figure>
+</div>
 </center>
 <br><br>
 
@@ -42,7 +51,8 @@
 <section class="container">
     <div class="row">
         <figure class="jumbotron">
-            <h2>Acknowledgements</h2>
+                
+            <h2>acknowledgements</h2>
             <img src="{% static 'images/bottomphoto.jpg' %}" /></a>
             <p>Our web application was made possible by OpenCV (Open Source Computer Vision Library). Specifically the image processing open functions in OpenCV for python which uses contours to find the continuous points of pixels with the same colors or intensities. We are happy to share with you our first python and django project collaboration. 
                 <a href="http://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_contours/py_contours_begin/py_contours_begin.html">Learn more about OpenCV.</a></p>
