--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -38,25 +38,25 @@
 <br><br>
 <section class="container">
     <div class="jen">
-        <figure class="col-sm-6">
-            <h2>Contact us</h2>
+        <figure class="col-md-12">
+            <h1>Jen</h1>
             <a href="http://instagram.com/jen.fung">
                 <img src="{% static 'images/jen.jpg' %}" style="float: left;"/></a>
-            <p>
+            <p style= "text-align: left">
                 <br></br>
-                Created using python, numpy library and a computer vision library openCV, this tool detects cell culture colonies and counts innumerable clones, providing data for further microbiological manipulations.
-            <br>It was inspired by my time in my previous position working in a DNA manipulation lab where E. coli cultures</br>
-                <a href="/uploads/simple/">Try now.</a></p>
+                
+                </p>
         </figure>
     </div>
-</section>
-<section class="container">
-    <div class="jen">
-        <figure class="col-sm-6">
-            <h2>Contact us</h2>
+    <div class="alex">
+        <figure class="col-md-12">
+            <h1 style="float: right">Alex</h1>
+            <br>
+                
+            </br>
             <a href="http://instagram.com/jen.fung">
-                <img src="{% static 'images/jen.jpg' %}" style="float: left;"/></a>
-            <p>
+                <img src="{% static 'images/jen.jpg' %}" style="float: right;"/></a>
+            <p style= "text-align: right">
                 <br></br>
                 Created using python, numpy library and a computer vision library openCV, this tool detects cell culture colonies and counts innumerable clones, providing data for further microbiological manipulations.
             <br>It was inspired by my time in my previous position working in a DNA manipulation lab where E. coli cultures</br>
