--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -42,25 +42,25 @@
             <h1>Jen</h1>
             <a href="http://instagram.com/jen.fung">
                 <img src="{% static 'images/jen.jpg' %}" style="float: left;"/></a>
-            <p style= "text-align: left">
+            <p style= "white-space: pre">
                 <br></br>
-                
+                github: jvxtaposed
                 </p>
         </figure>
     </div>
     <div class="alex">
         <figure class="col-md-12">
-            <h1 style="float: right">Alex</h1>
+            <h1 style="text-align: right">Alex</h1>
             <br>
                 
             </br>
-            <a href="http://instagram.com/jen.fung">
-                <img src="{% static 'images/jen.jpg' %}" style="float: right;"/></a>
+            <a href="http://instagram.com/alexzzk/">
+                <img src="{% static 'images/alexpic.jpg' %}" style="float: right;"/></a>
             <p style= "text-align: right">
                 <br></br>
-                Created using python, numpy library and a computer vision library openCV, this tool detects cell culture colonies and counts innumerable clones, providing data for further microbiological manipulations.
-            <br>It was inspired by my time in my previous position working in a DNA manipulation lab where E. coli cultures</br>
-                <a href="/uploads/simple/">Try now.</a></p>
+            github: azkurland17 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br></br>
+               
         </figure>
     </div>
 </section>
