--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -30,7 +30,7 @@
 
 <footer class="container">
     <div class="row">
-        <p class="col-sm-4">&copy; ass.</p>
+        <p class="col-sm-4">&copy; alex & jen r cool.</p>
         <ul class="col-sm-8">
             <li class="col-sm-1">
                 <a href="https://twitter.com/IEEEorg"><img
